--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,11 +1,6 @@
-.App {
-    margin: auto;
-}
-
-
 .landing {
     text-align: center;
-    
+    background-color: #E7F0EE;
 }
 
 .landing .hero-title {
@@ -15,26 +10,31 @@
     text-shadow: 3px 3px #2CC7B3;
 }
 
-nav {
-    margin-top: 15px;
-    text-align: left;
-    padding: 30px;
-}
-
-#landing-header {
+.landing-header {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 80px;
     color: #2CC7B3;
     text-shadow: 5px 5px #000000;
 }
 
-#landing-nav {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 32px;   
-    background-color: #D2E5E2;
+.landing-header:hover {
+    color: #000000;
+    text-shadow: 5px 5px #2CC7B3;
+    text-decoration: underline;
 }
 
-#landing-nav a {
+nav {
+    text-align: left;
+    padding: 5px;
+}
+
+.landing-nav {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 28px;   
+    background-color: #D2E5E2; 
+}
+
+.landing-nav a {
     text-decoration: none;
     color: #000000;
     display: inline-block;
@@ -42,61 +42,26 @@ nav {
     text-shadow: 3px 3px #2CC7B3;
 }
 
-#landing-nav a:last-child {
+.landing-nav a:last-child {
     margin-right: 0;
 }
 
-#landing-nav a:hover {
+.landing-nav a:hover {
     color: #ffffff;
+}
+
+#logo {
+    color:white;
+    text-shadow: 2px 2px #000000;
 }
 
 .selling-points {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
 }
 
 .selling-points .point-title {
     text-shadow: 2px 2px #2CC7B3;
     font-size: 28px;
-}
-
-.flip-card {
-    background-color: transparent;
-    width: 500px;
-    height: 200px;
-    perspective: 1000px;
-    margin: auto;
-    margin-top: 40px;
-}
-
-.flip-card-front {
-    background-color: #bbb;
-    color: black;
-}
-
-.flip-card-back {
-    background-color: #2980b9;
-    color: black;
-    transform: rotateY(180deg);
-    text-align: center;
-}
-
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+    font-style: normal;
 }
